fixed z-index issue

--- a/src/default.scss
+++ b/src/default.scss
@@ -10,3 +10,7 @@
 body{
   min-height: auto;
 }
+
+.md-menu-content {
+  z-index: 111;
+}
